# cgxm

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt
examples/sandbox/: CMakeLists.txt
examples/sandbox/src/: main.cpp  sandbox.cpp  sandbox.h
include/cgxm/core/: engine.hpp  log.hpp  platform.hpp
include/cgxm/render/: renderer.hpp
include/core/: engine.h
src/container/: deque.hpp  ts_deque.hpp
src/core/: engine.cpp  log.cpp  platform.mm
src/editor/: main.cpp
src/platform/: app.hpp  window.hpp
src/platform/darwin/: app.mm  window.mm
tests/: deque_test.cpp  ts_deque_test.cpp
